update style and make changes to highscore js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>You've completed the quiz!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <p>
-          Enter initials: <input type="text" id="initials" max="3" />
+          Enter Your Player Initials: <input type="text" id="Initials" />
           <button id="submit">Submit</button>
         </p>
       </div>
